[gd_scene load_steps=3 format=3 uid="uid://df73yks3fka5u"]

[ext_resource type="Script" uid="uid://c5dip531ctb3k" path="res://scripts/ui/main_menu.gd" id="1_pibn7"]
[ext_resource type="Theme" uid="uid://dbivxp4ikj2iy" path="res://resources/main_menu_style.tres" id="2_krrnc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pibn7")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_krrnc")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Fast & Focused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 15

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer/MainMenuButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Play"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer/MainMenuButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer/MainMenuButtons"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 0.454902)
text = "v0.0"
horizontal_alignment = 1
vertical_alignment = 2
